Google Maps Services php - initial FORK

--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -1,4 +1,4 @@
-name: Code_Checks
+name: "Code Checks"
 
 on:
   pull_request:
@@ -8,26 +8,29 @@ on:
     branches:
       - master
 
+permissions:
+  contents: read
+
 jobs:
-#  check:
-#    runs-on: ubuntu-latest
-#    strategy:
-#      matrix:
-#        php: [ '8.1', ]
-#    name: PHP ${{ matrix.php }} Validate composer.json
-#    steps:
-#      - uses: actions/checkout@v3
-#      - uses: shivammathur/setup-php@v2
-#        with:
-#          php-version: ${{ matrix.php }}
-#          coverage: none
-#      - run: composer validate --strict
+  check:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php: [ '8.1', ]
+    name: PHP ${{ matrix.php }} Validate composer.json
+    steps:
+      - uses: actions/checkout@v3
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          coverage: none
+      - run: composer validate --strict
 
   tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [ '7.4', '8.0', '8.1', '8.2', '8.3' ]
+        php: [ '8.1', '8.2', '8.3' ]
     name: PHP ${{ matrix.php }} tests
     steps:
       - uses: actions/checkout@v2
