--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,31 @@
 {
-    "name": "yidas/google-maps-services",
+    "name": "alex-kalanis/google-maps-php-services",
     "description": "PHP client library(SDK) for Google Maps API Web Services",
     "keywords": ["Google maps", "services", "php", "sdk"],
-    "homepage": "https://github.com/yidas/google-maps-services-php",
+    "homepage": "https://github.com/alex-kalanis/google-maps-php-services",
     "type": "library",
     "license": "MIT",
     "support": {
-        "issues": "https://github.com/yidas/google-maps-services-php/issues",
-        "source": "https://github.com/yidas/google-maps-services-php"
+        "issues": "https://github.com/alex-kalanis/google-maps-php-services/issues",
+        "source": "https://github.com/alex-kalanis/google-maps-php-services"
     },
     "require": {
         "ext-json": "*",
-        "php": ">=7.4"
+        "php": ">=8.1"
     },
     "require-dev": {
-        "alex-kalanis/remote-request": ">=6.0 <7",
         "shipmonk/composer-dependency-analyser": "^1.4",
-        "guzzlehttp/guzzle": "~6.5.6|^7.4.3",
-        "psr/http-message": "^1.0",
+        "guzzlehttp/guzzle": "^7.4.3",
+        "psr/http-message": "^2.0",
         "psr/http-client": "^1.0",
         "phpstan/phpstan": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
         "friendsofphp/php-cs-fixer": "^3.0",
-        "phpunit/phpunit": ">=7.2 <10"
+        "phpunit/phpunit": ">=10 <11"
     },
     "autoload": {
         "psr-4": {
-            "yidas\\googleMaps\\": "src/"
+            "kalanis\\google_maps\\": "src/"
         }
     }
 }
