--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -37,7 +37,7 @@ jobs:
       - uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          coverage: none
+          coverage: clover
       - run: composer install --no-progress
       - run: vendor/bin/phpunit
 
