--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,16 +7,16 @@ parameters:
 	excludePaths:
 		- 'tests/_autoload.php'
 		- 'tests/_bootstrap.php'
-#		- 'tests/CommonTestClass.php'
 	bootstrapFiles:
 		- 'tests/_autoload.php'
 	ignoreErrors:
+		# quality WTF - offset might not exists - as proved in tests
+		-
+			message: "#Offset 'key' on array#"
+			path: 'src/ClientConfig.php'
 		# quality WTF - usual problems with phpstan
 		-
 			message: '#of function call_user_func_array expects callable#'
-			path: 'src/Services.php'
-		-
-			message: '#Parameter \#2 \$query of method kalanis\\google_maps\\Clients\\AbstractClient\:\:request\(\) expects array#'
 			path: 'src/Services.php'
 #		# quality WTF - strval, intval
 #		- '#Parameter \#1 \$va[rl]u?e? of function [si][tn][rt]val expects#'
