--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [ '8.1', ]
+        php: [ '8.3', ]
     name: PHP ${{ matrix.php }} Validate composer.json
     steps:
       - uses: actions/checkout@v3
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [ '8.1', '8.2', '8.3', '8.4' ]
+        php: [ '8.1', '8.2', '8.3', '8.4', '8.5' ]
     name: PHP ${{ matrix.php }} tests
     steps:
       - uses: actions/checkout@v2
@@ -45,7 +45,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [ '8.1' ]
+        php: [ '8.3' ]
     name: PHP ${{ matrix.php }} code style
     steps:
       - uses: actions/checkout@v2
@@ -60,7 +60,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [ '8.1' ]
+        php: [ '8.3' ]
     name: PHP ${{ matrix.php }} phpstan
     steps:
       - uses: actions/checkout@v2
@@ -75,7 +75,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [ '8.1' ]
+        php: [ '8.3' ]
     name: PHP ${{ matrix.php }} problematic dependencies
     steps:
       - uses: actions/checkout@v2
