--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,14 @@ tests/data/clover.xml
 tests/external/
 tests/discard/
 /composer.lock
+
+# environment
+docker-compose.yml
+phpdocker/
 /vendor
+composer.phar
+composer.lock
+.php_cs.cache
+.php-cs-fixer.cache
+.DS_Store
+Thumbs.db
