--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -8,10 +8,10 @@ filter:
     - 'src/*'
 
 build:
-  image: default-jammy
+  image: default-noble
   environment:
     php:
-      version: '8.3'
+      version: '8.4'
   dependencies:
     before:
       - wget -O composer.phar https://getcomposer.org/composer.phar
